package controleur;

public class Score {
	
	private int valeur;
	
	
	public Score() {
		this.valeur = 0;
	}

	public int getValeur() {
		return valeur;
	}

	public void setValeur(int valeur) {
		this.valeur = valeur;
	}

}
 