package main;

import java.io.FileNotFoundException;
import java.io.IOException;
import java.lang.reflect.InvocationTargetException;

import javax.swing.JFrame;

import controleur.ecouteur.EcouteurBoutonQuitter;
import modele.*;
import modele.cartes.As;
import modele.categorie.Couleur;
import modele.categorie.Trefle;
import vue.CadreAccueil;
import vue.CadreRecords;
import controleur.*;

public class Main {

	public static void main(String[] args) throws ClassNotFoundException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException, FileNotFoundException, IOException {
		
		CadreAccueil c = new CadreAccueil();

		
	}

}
