package modele.categorie;

import modele.Categorie;

public class Trefle extends Categorie{

	public Trefle() {
		
		super(Couleur.Noir);
		
	}

	@Override
	public String toString() {
		return "Trefle";
	}

}
